--- a/_posts/2020-12-27-MCMC把妹法.md
+++ b/_posts/2020-12-27-MCMC把妹法.md
@@ -2,7 +2,7 @@
 layout: article
 title: MCMC把妹法
 tags: 算法
-key: MCMC
+key: 01
 ---
 
 ![TeXt Theme](https://upload-images.jianshu.io/upload_images/3866322-f2a4d3e3eb465efa.png?imageMogr2/auto-orient/strip%7CimageView2)
