--- a/_posts/2018-07-01-welcome.md
+++ b/_posts/2018-07-01-welcome.md
@@ -2,7 +2,7 @@
 layout: article
 title: Welcome
 tags: TeXt
-key: 01
+key: Welcome
 ---
 
 If you see this page, that means you have setup your site. enjoy! :ghost: :ghost: :ghost:
